# dioxus-frontend

./: Cargo.toml  Dioxus.toml
src/: main.rs
