[package]
name = "construction-frontend"
version = "0.1.0"
authors = ["Hardik Bhimani <hardik@iterator.in>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = "0.12.4"
futures = "0.3.30"
futures-channel = "0.3.30"
